# Pontu

./: .gitignore  .gitmodules  Doxyfile  LICENSE-FR  Projet tut proto  README-en.md  README.md
Documentation/: general.md
FichiersCreationRessource/Sprites/: objetJeu.kra  objetJeu.kra~
Gestion De Projet/: cahierDesCharges.md
Pontu/: CMakeLists.txt  Makefile
Pontu/buildDebug/: Pontu  rsrc
Pontu/entryPoints/: main.c  test.c  testAudio.c  testAudio.h
Pontu/include/debug/: printer.h
Pontu/include/engine/: ArrayUtils.h  Audio.h  AudioHandler.h  Button.h  ButtonActions.h  ColorPicker.h  Colors.h  Coord.h  FontLoader.h  FontUtils.h  GameInputProcessor.h  GeneralState.h  InputElement.h  InputProcessor.h  TextInput.h  TextLabel.h  TextureHandler.h  TextureLoader.h  UIElementUtils.h  arrayButton.h  arrayPositionSpecifier.h  arraySDL_Rect.h  arrayTextInput.h  arrayTextLabel.h
Pontu/include/model/: Board.h  Bridge.h  Coord.h  Game.h  Island.h  IslandOrBridge.h  Piece.h  Player.h  PlayersColors.h  arrayCoord.h
Pontu/include/modele/: Island.h  Joueur.h  Partie.h  Piece.h
Pontu/include/moteur/: Button.h
Pontu/include/view/: .GameCreationMenu.h.swp  BoardDrawer.h  ConnectionMenu.h  GameCreationMenu.h  GameDrawer.h  GameInterface.h  GameMain.h  MainMenu.h  MenuEndGame.h  PiecesDrawer.h  Settings.h  ToRect.h  menu.h
Pontu/rsrc/: rsrc
Pontu/src/: main.c
Pontu/src/debug/: CMakeLists.txt  printer.c
Pontu/src/engine/: .TextInput.c.swp  Audio.c  AudioHandler.c  Button.c  ButtonActions.c  CMakeLists.txt  ColorPicker.c  Colors.c  FontLoader.c  FontUtils.c  GameInputProcessor.c  InputElement.c  InputProcessor.c  TextInput.c  TextLabel.c  TextureHandler.c  TextureLoader.c  UIElementUtils.c
Pontu/src/model/: Board.c  CMakeLists.txt  Coord.c  Game.c  Island.c  IslandOrBridge.c  Piece.c  Player.c  PlayersColors.c
Pontu/src/modele/: Game.c  Joueur.c
Pontu/src/view/: .GameCreationMenu.c.swp  BoardDrawer.c  CMakeLists.txt  ConnectionMenu.c  ConnectionMenu.c.old  GameCreationMenu.c  GameDrawer.c  GameInterface.c  GameMain.c  MainMenu.c  MenuEndGame.c  PiecesDrawer.c  Settings.c  ToRect.c  menu.c
Pontu/test/: compile.sh  oldMain__ThisCanBeGameMain.c  test.c  testAudio.c  testAudioHandler.c  testBouton.c  testButton.c  testButtonTextureLoader.c  testConnectionMenu.c  testCreationMenu.c  testDrawMainMenu.c  testFontLoader.c  testGameInterface.c  testGenerateurTexture.c  testMenuEndGame.c  testSettingsView.c  testTextInput.c  testTextInputWithProcessor.c  testTextLabel.c  testTextureLoader.c  testTextureLoader.h
package_linux/pontu/DEBIAN/: control
